--- a/Lab/CSE110_Lab_Assignment_01.ipynb
+++ b/Lab/CSE110_Lab_Assignment_01.ipynb
@@ -64,22 +64,21 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Nm8cn6LGGxxB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Nm8cn6LGGxxB",
         "outputId": "3a33ba42-3ef4-4c1d-c6a5-50ad83d3207e"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "30\n",
-            "2\n",
-            "Sum = 32\n",
-            "Product = 60\n",
-            "Difference = 28\n"
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with '/bin/python' requires ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: '/bin/python -m pip install ipykernel -U --user --force-reinstall'"
           ]
         }
       ],
@@ -142,16 +141,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "CsvW0BrsGxxM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "CsvW0BrsGxxM",
         "outputId": "ee74d787-c1de-4d36-9769-f56404269210"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "3.5\n",
             "Area is 38.4846\n",
@@ -210,16 +209,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0cXCOjm0GxxU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "0cXCOjm0GxxU",
         "outputId": "fae95d1b-de35-4ce9-f3d8-74103a2b3574"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "-4\n",
             "-4\n",
@@ -282,16 +281,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XBdXtfEtGxxa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "XBdXtfEtGxxa",
         "outputId": "738e9958-a6b0-448d-84f8-9ab50ce128fc"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1\n",
             "3\n",
@@ -348,21 +347,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "SsjHXfW_Gxxg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "SsjHXfW_Gxxg",
         "outputId": "1a276adc-3330-4835-d93d-578e229cfb8b"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "34\n",
-            "The number is even\n"
+            "The number is ev\n"
           ]
         }
       ],
@@ -431,16 +429,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "J2siE5HRGxxo",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "J2siE5HRGxxo",
         "outputId": "2b7037ff-f7a4-425f-fee2-03685135a946"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "3\n",
             "Not a multiple\n"
@@ -509,16 +507,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "O_kEf_WsGxxr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "O_kEf_WsGxxr",
         "outputId": "9105a9fa-388d-4470-938d-6f703e371487"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "44\n",
             "44\n"
@@ -593,16 +591,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-Zjnff92Gxxx",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "-Zjnff92Gxxx",
         "outputId": "f4e75da8-18f0-448a-a1d4-8efca790409d"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "5\n",
             "Not multiple of 2 and 5 both\n"
@@ -685,16 +683,16 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "3j7LKP26Gxx2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "3j7LKP26Gxx2",
         "outputId": "4f777c97-78ce-4e9b-cb59-b321b206ba1c"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "5\n",
             "No\n"
@@ -765,16 +763,16 @@
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
-        "id": "mEjdHcbGGxx5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "mEjdHcbGGxx5",
         "outputId": "9509e2b0-0476-4fd4-ba92-b7fcf1618076"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "20\n",
             "No\n"
@@ -830,16 +828,16 @@
       "cell_type": "code",
       "execution_count": 30,
       "metadata": {
-        "id": "9sr1xTkMGxx_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "9sr1xTkMGxx_",
         "outputId": "7d38b4a4-fcdc-4119-d9a4-a6b60c7f6a04"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "23\n",
             "F\n"
@@ -901,17 +899,17 @@
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
-        "id": "L5JmB1bDGxyD",
-        "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c946f6aa-88f0-4596-da07-08171c2c867b"
+        "id": "L5JmB1bDGxyD",
+        "outputId": "c946f6aa-88f0-4596-da07-08171c2c867b",
+        "scrolled": true
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Input: 30\n",
             "Output: 6000\n"
@@ -964,16 +962,16 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "id": "xd9l2gQvGxyN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "xd9l2gQvGxyN",
         "outputId": "6b51fc29-309b-45a2-bee4-cc8d0d91f14a"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Input: 500\n",
             "Output: Hours: 0 Minutes: 8 Seconds: 20\n"
@@ -1031,16 +1029,16 @@
       "cell_type": "code",
       "execution_count": 20,
       "metadata": {
-        "id": "nxgt9wlFGxyY",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "nxgt9wlFGxyY",
         "outputId": "86f5c35b-d1e7-4cef-da41-2edac28ffa13"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Input: 3\n",
             "Output 1875\n"
@@ -1105,16 +1103,16 @@
       "cell_type": "code",
       "execution_count": 29,
       "metadata": {
-        "id": "0qbV5e33Gxye",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "0qbV5e33Gxye",
         "outputId": "9679c7b8-e368-406e-ea36-4ad129bcee8a"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "12\n",
             "Lunch\n"
@@ -1149,7 +1147,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -1163,7 +1161,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.2"
+      "version": "3.11.0"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+      }
     }
   },
   "nbformat": 4,
