--- a/Lab/CSE110_Lab_Assignment_01.ipynb
+++ b/Lab/CSE110_Lab_Assignment_01.ipynb
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -72,13 +72,12 @@
       },
       "outputs": [
         {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mRunning cells with '/bin/python' requires ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: '/bin/python -m pip install ipykernel -U --user --force-reinstall'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sum = 34\n",
+            "Product = 264\n",
+            "Difference = -10\n"
           ]
         }
       ],
@@ -347,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -360,7 +359,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The number is ev\n"
+            "The number is odd\n"
           ]
         }
       ],
