--- a/Lab/CSE110_Lab_Assignment_01.ipynb
+++ b/Lab/CSE110_Lab_Assignment_01.ipynb
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,28 +70,9 @@
         "id": "Nm8cn6LGGxxB",
         "outputId": "3a33ba42-3ef4-4c1d-c6a5-50ad83d3207e"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Sum = 34\n",
-            "Product = 264\n",
-            "Difference = -10\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "number1=int(input())\n",
-        "number2=int(input())\n",
-        "\n",
-        "sum = number1 + number2\n",
-        "product = number1 * number2 \n",
-        "difference = number1 - number2\n",
-        "\n",
-        "print(\"Sum =\", sum)\n",
-        "print(\"Product =\", product)\n",
-        "print(\"Difference =\", difference)\n"
+        "\n"
       ]
     },
     {
@@ -146,25 +127,9 @@
         "id": "CsvW0BrsGxxM",
         "outputId": "ee74d787-c1de-4d36-9769-f56404269210"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "3.5\n",
-            "Area is 38.4846\n",
-            "Circumference is 21.9912\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "radius = float(input())\n",
-        "\n",
-        "circumference = 2 * 3.1416 * radius\n",
-        "area = 3.1416 * radius * radius\n",
-        "\n",
-        "print(\"Area is\", area)\n",
-        "print(\"Circumference is\", circumference)\n"
+        "\n"
       ]
     },
     {
@@ -214,29 +179,9 @@
         "id": "0cXCOjm0GxxU",
         "outputId": "fae95d1b-de35-4ce9-f3d8-74103a2b3574"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "-4\n",
-            "-4\n",
-            "The numbers are equal\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "number1 = int(input())\n",
-        "number2 = int(input())\n",
-        "\n",
-        "if (number1 > number2):\n",
-        "  print(\"First is greater\")\n",
-        "\n",
-        "elif (number1 < number2):\n",
-        "  print(\"Second is greater\")\n",
-        "\n",
-        "else:\n",
-        "  print(\"The numbers are equal\")\n"
+        "\n"
       ]
     },
     {
@@ -286,27 +231,8 @@
         "id": "XBdXtfEtGxxa",
         "outputId": "738e9958-a6b0-448d-84f8-9ab50ce128fc"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "1\n",
-            "3\n",
-            "2\n"
-          ]
-        }
-      ],
-      "source": [
-        "number1 = int(input())\n",
-        "number2 = int(input())\n",
-        "\n",
-        "if (number1 > number2):\n",
-        "  print(number1 - number2)\n",
-        "\n",
-        "elif (number1 < number2 ):\n",
-        "  print(number2 - number1)\n"
-      ]
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -346,7 +272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -354,24 +280,8 @@
         "id": "SsjHXfW_Gxxg",
         "outputId": "1a276adc-3330-4835-d93d-578e229cfb8b"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The number is odd\n"
-          ]
-        }
-      ],
-      "source": [
-        "number = int(input())\n",
-        "\n",
-        "if (number%2):\n",
-        "  print(\"The number is odd\")\n",
-        "\n",
-        "else:\n",
-        "  print(\"The number is even\")"
-      ]
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -434,25 +344,8 @@
         "id": "J2siE5HRGxxo",
         "outputId": "2b7037ff-f7a4-425f-fee2-03685135a946"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "3\n",
-            "Not a multiple\n"
-          ]
-        }
-      ],
-      "source": [
-        "number = int(input())\n",
-        "\n",
-        "if not(number%2) or not(number%5):\n",
-        "  print(number)\n",
-        "\n",
-        "else:\n",
-        "  print(\"Not a multiple\")\n"
-      ]
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -512,27 +405,9 @@
         "id": "O_kEf_WsGxxr",
         "outputId": "9105a9fa-388d-4470-938d-6f703e371487"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "44\n",
-            "44\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "number = int(input())\n",
-        "\n",
-        "if not(number%2) and not(number%5):\n",
-        "  print(\"multiple of 2 and 5 both\")\n",
-        "  \n",
-        "elif not(number%2) or not(number%5):\n",
-        "  print(number)\n",
-        "\n",
-        "else:\n",
-        "  print(\"Not a multiple\")\n"
+        "\n"
       ]
     },
     {
@@ -596,25 +471,8 @@
         "id": "-Zjnff92Gxxx",
         "outputId": "f4e75da8-18f0-448a-a1d4-8efca790409d"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "5\n",
-            "Not multiple of 2 and 5 both\n"
-          ]
-        }
-      ],
-      "source": [
-        "number = int(input())\n",
-        "\n",
-        "if not(number%2) and not(number%5):\n",
-        "  print(number)\n",
-        "\n",
-        "else:\n",
-        "  print(\"Not multiple of 2 and 5 both\")"
-      ]
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -680,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -688,25 +546,8 @@
         "id": "3j7LKP26Gxx2",
         "outputId": "4f777c97-78ce-4e9b-cb59-b321b206ba1c"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "5\n",
-            "No\n"
-          ]
-        }
-      ],
-      "source": [
-        "number = int(input())\n",
-        "\n",
-        "if (number%2) and (number%5):\n",
-        "  print(number)\n",
-        "\n",
-        "elif not(number%2) or not(number%5):\n",
-        "  print(\"No\")"
-      ]
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -760,7 +601,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -768,25 +609,8 @@
         "id": "mEjdHcbGGxx5",
         "outputId": "9509e2b0-0476-4fd4-ba92-b7fcf1618076"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "20\n",
-            "No\n"
-          ]
-        }
-      ],
-      "source": [
-        "number = int(input())\n",
-        "\n",
-        "if (number%2) or (number%5):\n",
-        "  print(number)\n",
-        "\n",
-        "elif not(number%2) or not(number%5):\n",
-        "  print(\"No\")"
-      ]
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -825,7 +649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -833,36 +657,9 @@
         "id": "9sr1xTkMGxx_",
         "outputId": "7d38b4a4-fcdc-4119-d9a4-a6b60c7f6a04"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "23\n",
-            "F\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "mark = int(input())\n",
-        "\n",
-        "if (mark>=0 and mark <=100):\n",
-        "  \n",
-        "  if (mark>=90):\n",
-        "    print(\"A\")\n",
-        "  elif (mark>=80):\n",
-        "    print(\"B\")\n",
-        "  elif (mark>=70):\n",
-        "    print(\"C\")\n",
-        "  elif (mark>=60):\n",
-        "    print(\"D\")\n",
-        "  elif (mark>=50):\n",
-        "    print(\"E\")\n",
-        "  else:\n",
-        "    print(\"F\")\n",
-        "\n",
-        "else:\n",
-        "  print(\"Invalid Marks\")    "
+        " "
       ]
     },
     {
@@ -896,7 +693,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -905,24 +702,9 @@
         "outputId": "c946f6aa-88f0-4596-da07-08171c2c867b",
         "scrolled": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Input: 30\n",
-            "Output: 6000\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "hour = int(input(\"Input: \"))\n",
-        "\n",
-        "if (hour<=40):\n",
-        "  print(\"Output:\", hour*200)\n",
-        "\n",
-        "else:\n",
-        "  print(\"Output:\", 8000+(hour-40)*300)\n"
+        "\n"
       ]
     },
     {
@@ -959,7 +741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -967,24 +749,9 @@
         "id": "xd9l2gQvGxyN",
         "outputId": "6b51fc29-309b-45a2-bee4-cc8d0d91f14a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Input: 500\n",
-            "Output: Hours: 0 Minutes: 8 Seconds: 20\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "second = int(input(\"Input: \"))\n",
-        "\n",
-        "hour = (second//3600)\n",
-        "minute =((second%3600)//60)\n",
-        "second = ((second%3600)%60)\n",
-        "\n",
-        "print(\"Output: Hours:\", hour , \"Minutes:\", minute , \"Seconds:\", second)\n"
+        "\n"
       ]
     },
     {
@@ -1026,7 +793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1034,24 +801,8 @@
         "id": "nxgt9wlFGxyY",
         "outputId": "86f5c35b-d1e7-4cef-da41-2edac28ffa13"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Input: 3\n",
-            "Output 1875\n"
-          ]
-        }
-      ],
-      "source": [
-        "s = int(input(\"Input: \"))\n",
-        "\n",
-        "if (s<100):\n",
-        "  print(\"Output\",3000-125*s*s)\n",
-        "else:\n",
-        "  print(\"Output\",(12000/(4+s*s/14900)))"
-      ]
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -1100,7 +851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1108,34 +859,9 @@
         "id": "0qbV5e33Gxye",
         "outputId": "9679c7b8-e368-406e-ea36-4ad129bcee8a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "12\n",
-            "Lunch\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "time = int(input())\n",
-        "\n",
-        "if (time>=0 and time<=24):\n",
-        "  \n",
-        "  if (time>=4 and time<=6):\n",
-        "    print(\"Breakfast\")\n",
-        "  elif (time>=12 and time<=13):\n",
-        "    print(\"Lunch\")\n",
-        "  elif (time>=16 and time<=17):\n",
-        "    print(\"Snacks\")\n",
-        "  elif (time>=19 and time<=20):\n",
-        "    print(\"Dinner\")\n",
-        "  else:\n",
-        "    print(\"Patience is a virtue\")\n",
-        "\n",
-        "else:\n",
-        "  print(\"Wrong Time\")\n"
+        "\n"
       ]
     }
   ],
@@ -1160,7 +886,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.0"
+      "version": "3.11.1 (main, Jan  6 2023, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
     },
     "vscode": {
       "interpreter": {
